--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -47,7 +47,7 @@
                     <option value="" disabled selected>Select your role</option>
                     <option value="ADMIN">Admin</option>
                     <option value="USER">User</option>
-                    <option value="MANAGER">Manager</option>
+                    <option value="AGENT">Agent</option>
                 </select>
             </div>
             <div class="d-grid">
